Fixed margins so the top part of the portlet margin is not pushed too far down while retaining spacing between each of them.
git-svn-id: https://svn.physiomeproject.org/svn/physiome/cellml.theme/trunk@3490 eb92df5b-a40c-0410-b02c-bf52feaaa166

--- a/cellml/theme/browser/stylesheets/base.css
+++ b/cellml/theme/browser/stylesheets/base.css
@@ -636,8 +636,12 @@ ul.sideList {
 
 .portletHeader {
     font-size: 1.3em;
-    margin: 1.23em 0 0.615em;
+    margin-bottom: 0.615em;
     border-top: 1px solid #666666;
     color: #666666;
     padding-top: 0.5em;
+}
+
+.portlet {
+    margin-bottom: 1.6em;
 }
